
[package]
name = "AoC-2024-day-8" # the name of the package
version = "0.0.1"    # the current version, obeying semver

[[bin]]
name = "step-1"
path = "./s1.rs"
test = false
bench = false

[[bin]]
name = "step-2"
path = "./s2.rs"
test = false
bench = false

[[bin]]
name = "step-2-again"
path = "./s2.again.rs"
test = false
bench = false